Initial commit - complete backend